Add extension icon and update package metadata

--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "Real-time linting, formatting, and syntax highlighting for HQL (Hive Query Language)",
   "version": "0.1.0",
   "publisher": "pi22by7",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pi22by7/HQLint.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pi22by7/HQLint/issues"
+  },
+  "homepage": "https://github.com/pi22by7/HQLint#readme",
+  "license": "MIT",
+  "icon": "assets/icon.png",
   "engines": {
     "vscode": "^1.85.0"
   },
