--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hqlint",
   "displayName": "HQLint - Hive QL Linter and Formatter",
   "description": "Real-time linting, formatting, and syntax highlighting for HQL (Hive Query Language)",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "publisher": "pi22by7",
   "repository": {
     "type": "git",
@@ -78,25 +78,75 @@
           "default": true,
           "description": "Enable/disable HQL formatting"
         },
-        "hql.formatting.indentSize": {
+        "hql.formatting.tabWidth": {
           "type": "number",
           "default": 2,
+          "minimum": 1,
+          "maximum": 8,
           "description": "Number of spaces for indentation"
         },
-        "hql.formatting.uppercaseKeywords": {
-          "type": "boolean",
-          "default": true,
-          "description": "Convert keywords to uppercase"
-        },
-        "hql.formatting.newlineBeforeKeywords": {
-          "type": "boolean",
-          "default": true,
-          "description": "Add newline before major keywords (SELECT, FROM, WHERE, etc.)"
-        },
-        "hql.formatting.alignCommas": {
+        "hql.formatting.useTabs": {
           "type": "boolean",
           "default": false,
-          "description": "Align commas in SELECT lists"
+          "description": "Use tabs instead of spaces for indentation"
+        },
+        "hql.formatting.keywordCase": {
+          "type": "string",
+          "enum": ["upper", "lower", "preserve"],
+          "default": "upper",
+          "description": "Case transformation for SQL keywords"
+        },
+        "hql.formatting.dataTypeCase": {
+          "type": "string",
+          "enum": ["upper", "lower", "preserve"],
+          "default": "upper",
+          "description": "Case transformation for data types"
+        },
+        "hql.formatting.functionCase": {
+          "type": "string",
+          "enum": ["upper", "lower", "preserve"],
+          "default": "upper",
+          "description": "Case transformation for function names"
+        },
+        "hql.formatting.identifierCase": {
+          "type": "string",
+          "enum": ["upper", "lower", "preserve"],
+          "default": "preserve",
+          "description": "Case transformation for identifiers (table/column names)"
+        },
+        "hql.formatting.indentStyle": {
+          "type": "string",
+          "enum": ["standard", "tabularLeft", "tabularRight"],
+          "default": "standard",
+          "description": "Indentation style (standard, tabular left-aligned, or tabular right-aligned)"
+        },
+        "hql.formatting.linesBetweenQueries": {
+          "type": "number",
+          "default": 1,
+          "minimum": 0,
+          "maximum": 5,
+          "description": "Number of blank lines between queries"
+        },
+        "hql.formatting.denseOperators": {
+          "type": "boolean",
+          "default": false,
+          "description": "Use dense spacing for operators (a+b vs a + b)"
+        },
+        "hql.formatting.newlineBeforeSemicolon": {
+          "type": "boolean",
+          "default": false,
+          "description": "Place semicolon on a new line"
+        },
+        "hql.logLevel": {
+          "type": "string",
+          "enum": [
+            "debug",
+            "info",
+            "warn",
+            "error"
+          ],
+          "default": "info",
+          "description": "Logging level for HQL extension output"
         }
       }
     },
@@ -122,12 +172,14 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/node": "^24.x",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
     "typescript": "^5.9.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sql-formatter": "^15.6.10"
+  }
 }
