--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,33 @@
+# Development files
 .vscode/**
 .vscode-test/**
 src/**
-.gitignore
-.eslintrc.json
-**/*.map
+out/test/**
 **/*.ts
+**/*.map
 tsconfig.json
+eslint.config.js
+.eslintrc.json
+test-output.log
+package-lock.json
+
+# Dependencies (only production deps will be included via package.json)
+node_modules/**
+!node_modules/sql-formatter/**
+
+# Git and CI/CD
+.gitignore
+.github/**
+
+# Build artifacts
+*.vsix
+.vscodeignore
+
+# Development assets
 assets/logo.png
 examples/**
-.github/**
+
+# Claude Code files (internal development)
+CLAUDE.md
+.claude/**
+IMPROVEMENT_PLAN.md
