--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/pi22by7/HQLint.git"
   },
+  "activationEvents": [
+    "onLanguage:hql"
+  ],
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -54,15 +57,22 @@
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && node esbuild.js --production"
+    "package": "npm run check-types && node esbuild.js --production",
+    "compile-tests": "tsc -p .",
+    "test": "npm run compile-tests && node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/node": "^24.x",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^24.10.1",
     "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "@vscode/test-electron": "^2.5.2",
     "esbuild": "^0.25.12",
     "eslint": "^9.38.0",
+    "glob": "^13.0.0",
+    "mocha": "^11.7.5",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3"
   },
