--- a/crates/hql-ls/Cargo.toml
+++ b/crates/hql-ls/Cargo.toml
@@ -7,7 +7,7 @@ description = "A Language Server for Hive QL (HQL)"
 
 [dependencies]
 tower-lsp = "0.20"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlparser = { version = "0.54", features = ["serde"] }
@@ -15,3 +15,4 @@ anyhow = "1"
 dashmap = "6" # For concurrent map access (document store)
 ropey = "1.6" # For efficient text editing/handling
 regex = "1.12.2"
+sqlformat = "0.5.0"
